--- a/email 01/index.html
+++ b/email 01/index.html
@@ -6,26 +6,26 @@
     <meta name="x-preheader" content="Conte com a Plure para comunicação visual e brindes corporativos — rápido, simples e sem dor de cabeça.">
     <title>Conte com a Plure</title>
 
-    <!-- Webfont -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
     <style>
-      /* Resets seguros */
       body,table,td,a { -ms-text-size-adjust:100%; -webkit-text-size-adjust:100%; }
       table,td { mso-table-lspace:0pt; mso-table-rspace:0pt; }
       img { -ms-interpolation-mode:bicubic; border:0; outline:none; text-decoration:none; display:block; }
       body { margin:0; padding:0; width:100% !important; height:100% !important; background:#f2f4f7; }
 
-      /* Mobile (usar px aqui é mais compatível com clientes de e-mail) */
       @media only screen and (max-width: 600px) {
         .wrapper { width:100% !important; }
-        .p-body { padding:0 1.25rem 1.5rem 1.25rem !important; } /* laterais menores no mobile */
-        .stack { display:block !important; width:100% !important; }
-        .center { text-align:center !important; }
+        .p-body { padding:0 1.25rem 1.5rem 1.25rem !important; }
+        .footer .stack { display:table-cell !important; width:50% !important; vertical-align:middle !important; }
+        .footer-pad { padding:1.25rem !important; }
+        .footer p, .footer a { font-size:.75rem !important; line-height:1.125rem !important; }
+        .footer .contact-title { font-size:1rem !important; }
+        .footer .logo-footer { width:120px !important; height:auto !important; }
+        .footer .icon-social { width:24px !important; height:24px !important; }
         .icons-row td { padding:0 .375rem 0 0 !important; }
       }
 
-      /* Dark mode (sem mexer nas cores inline dos links) */
       @media (prefers-color-scheme: dark) {
         body { background:#0b0b0d; }
         .card { background:#F2EEF4 !important; color:#291142 !important; }
@@ -36,26 +36,22 @@
 
     <!--[if mso]>
       <style>
-        /* Outlook para Windows ignora webfonts: força fallback */
         body, table, td, p, a, span { font-family: Arial, Helvetica, sans-serif !important; }
       </style>
     <![endif]-->
   </head>
 
   <body role="article" aria-roledescription="email" style="margin:0; font-family:'Open Sans', Arial, Helvetica, sans-serif;">
-    <!-- Pré-header escondido -->
     <div style="display:none; max-height:0; overflow:hidden; font-size:1px; line-height:1px; color:#f2f4f7;">
       Conte com a Plure para comunicação visual e brindes corporativos — rápido e simples.&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
     </div>
 
-    <!-- CONTAINER -->
     <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background:#f2f4f7;">
       <tr>
         <td align="center" style="padding:1.5rem .75rem;">
           <table role="presentation" cellpadding="0" cellspacing="0" width="600" class="wrapper" style="width:37.5rem; max-width:37.5rem;">
             <tr>
               <td class="card" style="background:#F2EEF4; border-radius:.5rem; overflow:hidden;">
-                <!-- HEADER (logo central) -->
                 <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
                   <tr>
                     <td align="center" style="padding:0.5rem 1.5rem 0 1.5rem;">
@@ -66,12 +62,12 @@
                   </tr>
                 </table>
 
-                <!-- BODY -->
                 <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
                   <tr>
-                    <!-- Mesma distância logo→texto e texto→barra azul: 1.5rem -->
                     <td class="p-body" style="padding:0 2.5rem 2.5rem 2.5rem; font-family:'Open Sans', Arial, Helvetica, sans-serif; color:#291142;">
-                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.25rem; font-weight:700;">Oi <span style="color:#291142;">[Nome]</span>, tudo bem?</p>
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.25rem; font-weight:700;">
+                        Oi <span>{{INSERIR_VARIAVEL_NOME_AQUI}}</span>, tudo bem?
+                      </p>
                       <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem; font-weight:400;">Aqui é o André da Plure.</p>
                       <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
                         Sabemos que o dia a dia é cheio de demandas, prazos curtos e pouco tempo para lidar com fornecedores.
@@ -81,36 +77,35 @@
                         Seja em comunicação visual, brindes corporativos personalizados ou até na organização de kits especiais,
                         cuidamos de cada detalhe para que você tenha mais tranquilidade e possa focar no que é mais estratégico.
                       </p>
-                      <p style="margin:0; font-size:.8125rem; line-height:1.375rem;">
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
                         Basta responder a este e-mail ou, se preferir, falar com a gente pelo
                         <a href="https://wa.me/5521998333323" target="_blank" rel="noopener" style="color:#291142; text-decoration:underline; font-weight:600;">WhatsApp</a>.
                       </p>
-                      </p> <p style="margin:0; font-size:13px; line-height:22px;">Um abraço,</p>
+                      <p style="margin:0; font-size:13px; line-height:22px;">Um abraço,</p>
                       <p style="margin:0; font-size:13px; line-height:22px; font-weight:700;">André</p>
                     </td>
                   </tr>
                 </table>
 
-                <!-- BARRA AZUL CLARO -->
                 <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="bluebar" style="background:#10b6eb;">
                   <tr>
                     <td class="center" style="padding:1rem 1.5rem; text-align:center; font-family:'Open Sans', Arial, Helvetica, sans-serif; font-size:.8125rem; line-height:1.25rem; color:#502262;">
                       Quer continuar recebendo as novidades da Plure?
                       &nbsp;
-                      <a href="https://seusite.com/preferencias?email={{email}}" target="_blank" rel="noopener" style="color:#F2EEF4; font-weight:700; text-decoration:underline;">clique aqui!</a>
+                      <a href="#" target="_blank" rel="noopener" style="color:#F2EEF4; font-weight:700; text-decoration:underline;">clique aqui!</a>
                     </td>
                   </tr>
                 </table>
 
-                <!-- RODAPÉ ROXO -->
                 <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="footer" style="background:#512a86; color:#F2EEF4;">
                   <tr>
-                    <td style="padding:2.5rem 1.5rem;">
+                    <td class="footer-pad" style="padding:2.5rem 1.5rem;">
                       <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
                         <tr>
-                          <!-- logo e ícones -->
                           <td class="stack center" width="45%" valign="middle" style="padding-right:1rem; text-align:center; vertical-align:middle;">
-                            <img src="/img/plure-logo-footer.png" width="70%" height="70%" alt="Plure" style="height:auto; filter:brightness(0) invert(1); margin:0 auto .75rem auto;">
+                            <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
+                              <img src="/img/plure-logo-footer.png" width="70%" height="70%" alt="Plure" style="height:auto; filter:brightness(0) invert(1); margin:0 auto .75rem auto;">
+                            </a>
                             <table role="presentation" cellpadding="0" cellspacing="0" align="center">
                               <tr class="icons-row">
                                 <td style="padding-right:.625rem; vertical-align:middle;">
@@ -127,7 +122,6 @@
                             </table>
                           </td>
 
-                          <!-- contatos -->
                           <td class="stack" width="55%" valign="middle" style="padding-left:1rem; font-family:'Open Sans', Arial, Helvetica, sans-serif; font-size:.8125rem; line-height:1.25rem; vertical-align:middle;">
                             <p style="margin:0 0 .5rem 0; font-weight:600; font-size:1.25rem;">Contato</p>
                             <p style="margin:0;">
@@ -142,10 +136,9 @@
                         </tr>
                       </table>
 
-                      <!-- copyright -->
                       <p style="margin:1.25rem 0 0 0; font-family:'Open Sans', Arial, Helvetica, sans-serif; font-size:.75rem; line-height:1.125rem; text-align:center;">
                         © 2025 Plure | Comunicação visual empresarial e brindes corporativos.<br>
-                        Se não quiser receber mais os emails, <a href="https://seusite.com/unsubscribe?email={{email}}" target="_blank" rel="noopener" style="color:#F2EEF4; text-decoration:underline;">clique aqui</a>.
+                        Se não quiser receber mais os emails, <a href="||UNSUBSCRIBE_LINK||" target="_blank" rel="noopener" style="color:#F2EEF4; text-decoration:underline;">clique aqui</a>.
                       </p>
                     </td>
                   </tr>
@@ -153,10 +146,9 @@
               </td>
             </tr>
 
-            <!-- Ver no navegador -->
             <tr>
               <td align="center" style="padding:.75rem 0 0 0; font-family:'Open Sans', Arial, Helvetica, sans-serif; font-size:.75rem; color:#291142;">
-                <a href="https://seusite.com/view-in-browser?id={{message_id}}" target="_blank" rel="noopener" style="color:#291142; text-decoration:underline;">Ver no navegador</a>
+                <a href="||WEB_PREVIEW_LINK||" target="_blank" rel="noopener" style="color:#291142; text-decoration:underline;">Ver no navegador</a>
               </td>
             </tr>
 
