--- a/email 01/index.html
+++ b/email 01/index.html
@@ -92,7 +92,7 @@
                     <td class="center" style="padding:1rem 1.5rem; text-align:center; font-family:'Open Sans', Arial, Helvetica, sans-serif; font-size:.8125rem; line-height:1.25rem; color:#502262;">
                       Quer continuar recebendo as novidades da Plure?
                       &nbsp;
-                      <a href="#" target="_blank" rel="noopener" style="color:#F2EEF4; font-weight:700; text-decoration:underline;">clique aqui!</a>
+                      <a href="https://plurecomercial.com/confirmacao/" target="_blank" rel="noopener" style="color:#F2EEF4; font-weight:700; text-decoration:underline;">clique aqui!</a>
                     </td>
                   </tr>
                 </table>
