--- a/email 01/cicero/index.html
+++ b/email 01/cicero/index.html
@@ -27,7 +27,6 @@
       }
 
       @media (prefers-color-scheme: dark) {
-        body { background:#0b0b0d; }
         .card { background:#F2EEF4 !important; color:#291142 !important; }
         .bluebar { background:#2EB4EF !important; }
         .footer { background:#502262 !important; color:#F2EEF4 !important; }
@@ -56,7 +55,7 @@
                   <tr>
                     <td align="center" style="padding:0.5rem 1.5rem 0 1.5rem;">
                       <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
-                        <img src="/img/plure-logo-header.png" width="92" height="32" alt="Plure" style="height:auto; margin:0 auto 2.5rem auto;">
+                        <img src="https://cdn.discordapp.com/attachments/1089566799714078840/1422371338290466938/plure-logo-header.png?ex=68dc6e09&is=68db1c89&hm=bde520acd0f00048e65e7df6a6fa2da35c356c988e75ad6c36bf2e1fe555eb12&" width="92" height="32" alt="Plure" style="height:auto; margin:0 auto 2.5rem auto;">
                       </a>
                     </td>
                   </tr>
@@ -66,9 +65,9 @@
                   <tr>
                     <td class="p-body" style="padding:0 2.5rem 2.5rem 2.5rem; font-family:'Open Sans', Arial, Helvetica, sans-serif; color:#291142;">
                       <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.25rem; font-weight:700;">
-                        Oi <span>{{INSERIR_VARIAVEL_NOME_AQUI}}</span>, tudo bem?
+                        Oi <span>*|PRIMEIRO_NOME|*</span>, tudo bem?
                       </p>
-                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem; font-weight:400;">Aqui é o André da Plure.</p>
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem; font-weight:400;">Aqui é o Cicero da Plure.</p>
                       <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
                         Sabemos que o dia a dia é cheio de demandas, prazos curtos e pouco tempo para lidar com fornecedores.
                         A boa notícia é que você já pode contar conosco de forma simples e rápida: a Plure está pronta para apoiar sua empresa sempre que surgir uma necessidade.
@@ -79,10 +78,10 @@
                       </p>
                       <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
                         Basta responder a este e-mail ou, se preferir, falar com a gente pelo
-                        <a href="https://wa.me/5521998333323" target="_blank" rel="noopener" style="color:#291142; text-decoration:underline; font-weight:600;">WhatsApp</a>.
+                        <a href="https://wa.me/5521999180312" target="_blank" rel="noopener" style="color:#291142; text-decoration:underline; font-weight:600;">WhatsApp</a>.
                       </p>
                       <p style="margin:0; font-size:13px; line-height:22px;">Um abraço,</p>
-                      <p style="margin:0; font-size:13px; line-height:22px; font-weight:700;">André</p>
+                      <p style="margin:0; font-size:13px; line-height:22px; font-weight:700;">Cicero</p>
                     </td>
                   </tr>
                 </table>
@@ -104,18 +103,18 @@
                         <tr>
                           <td class="stack center" width="45%" valign="middle" style="padding-right:1rem; text-align:center; vertical-align:middle;">
                             <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
-                              <img src="/img/plure-logo-footer.png" width="70%" height="70%" alt="Plure" style="height:auto; filter:brightness(0) invert(1); margin:0 auto .75rem auto;">
+                              <img src="https://cdn.discordapp.com/attachments/1089566799714078840/1422371339263803412/plure-logo-footer.png?ex=68dc6e09&is=68db1c89&hm=e44fd298d5ae7394cd2c9ac687b6427a16389462ac22273ac82e214e0a12401e&" width="70%" height="70%" alt="Plure" style="height:auto; filter:brightness(0) invert(1); margin:0 auto .75rem auto;">
                             </a>
                             <table role="presentation" cellpadding="0" cellspacing="0" align="center">
                               <tr class="icons-row">
                                 <td style="padding-right:.625rem; vertical-align:middle;">
                                   <a href="https://www.instagram.com/plure.vc/" target="_blank" rel="noopener" aria-label="Instagram" style="text-decoration:none;">
-                                    <img src="/img/instagram-icon.png" width="28" height="28" alt="Instagram">
+                                    <img src="https://cdn.discordapp.com/attachments/1089566799714078840/1422371338689056818/instagram-icon.png?ex=68dc6e09&is=68db1c89&hm=af832a61c22b56e257d7d5a4324ea3a1b996480d1bf1c5745685cf4cc7166b48&" width="28" height="28" alt="Instagram">
                                   </a>
                                 </td>
                                 <td style="vertical-align:middle;">
                                   <a href="https://www.linkedin.com/company/plure/" target="_blank" rel="noopener" aria-label="LinkedIn" style="text-decoration:none;">
-                                    <img src="/img/linkedin-icon.png" width="28" height="28" alt="LinkedIn">
+                                    <img src="https://cdn.discordapp.com/attachments/1089566799714078840/1422371338982527046/linkedin-icon.png?ex=68dc6e09&is=68db1c89&hm=813c5c9f362dca5d6bbdc8508dcc94443c01dbcbf110accac790ccd3433b96e3&" width="28" height="28" alt="LinkedIn">
                                   </a>
                                 </td>
                               </tr>
@@ -129,8 +128,12 @@
                               <a href="mailto:cicero@plurecomercial.com" style="color:#F2EEF4; text-decoration:none;">cicero@plurecomercial.com</a>
                             </p>
                             <p style="margin:.5rem 0 .75rem 0;">
-                              (21) 9 9833-3323 — André Franco<br>
-                              (21) 9 9918-0312 — Cicero Dias
+                              <a href="https://wa.me/5521998333323" target="_blank" rel="noopener" style="color:#F2EEF4; text-decoration:none;">
+                                (21) 9 9833-3323 — André Franco
+                              </a><br>
+                              <a href="https://wa.me/5521999180312" target="_blank" rel="noopener" style="color:#F2EEF4; text-decoration:none;">
+                                (21) 9 9918-0312 — Cicero Dias
+                              </a>
                             </p>
                           </td>
                         </tr>
@@ -138,7 +141,6 @@
 
                       <p style="margin:1.25rem 0 0 0; font-family:'Open Sans', Arial, Helvetica, sans-serif; font-size:.75rem; line-height:1.125rem; text-align:center;">
                         © 2025 Plure | Comunicação visual empresarial e brindes corporativos.<br>
-                        Se não quiser receber mais os emails, <a href="||UNSUBSCRIBE_LINK||" target="_blank" rel="noopener" style="color:#F2EEF4; text-decoration:underline;">clique aqui</a>.
                       </p>
                     </td>
                   </tr>
@@ -146,11 +148,6 @@
               </td>
             </tr>
 
-            <tr>
-              <td align="center" style="padding:.75rem 0 0 0; font-family:'Open Sans', Arial, Helvetica, sans-serif; font-size:.75rem; color:#291142;">
-                <a href="||WEB_PREVIEW_LINK||" target="_blank" rel="noopener" style="color:#291142; text-decoration:underline;">Ver no navegador</a>
-              </td>
-            </tr>
 
           </table>
         </td>
