fix: correção email 03 css

--- a/email 03/index.html
+++ b/email 03/index.html
@@ -32,15 +32,6 @@
         .footer { background:#502262 !important; color:#F2EEF4 !important; }
       }
 
-      .btn {
-        display:inline-block;
-        background:#502262;
-        color:#F2EEF4 !important;
-        font-weight:700;
-        text-decoration:none;
-        border-radius:.375rem;
-        padding:.75rem 1.5rem;
-      }
     </style>
     <!--[if mso]>
       <style>
@@ -63,7 +54,7 @@
                   <tr>
                     <td align="center" style="padding:1.25rem 2rem 1rem 2rem; text-align:center;">
                       <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
-                        <img src="https://cdn.discordapp.com/attachments/1089566799714078840/1422371338290466938/plure-logo-header.png?ex=68e4ffc9&is=68e3ae49&hm=ce5eb09a83c923c19aae2d89551d998939830eebc33305473bd0fdaf2937f4f7&" width="92" height="32" alt="Plure" style="max-width:75px; height:auto; filter:brightness(0) invert(1); margin:0 auto;">
+                        <img src="https://cdn.discordapp.com/attachments/1089566799714078840/1422371339263803412/plure-logo-footer.png?ex=68e4ffc9&is=68e3ae49&hm=099f008650a89b64c2407b70d7ac94287d24c8884ee35c4fcb3d8bdd3da062cc&" width="92" height="32" alt="Plure" style="max-width:75px; height:auto; margin:0 auto;">
                       </a>
                     </td>
                   </tr>
@@ -116,7 +107,7 @@
                       <table role="presentation" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto;">
                         <tr>
                           <td align="center">
-                            <a href="https://www.plurecomercial.com/portfolio/" target="_blank" rel="noopener" class="btn">Inspire-se</a>
+                            <a href="https://www.plurecomercial.com/portfolio/" target="_blank" rel="noopener" style="display:inline-block; background:#502262; color:#F2EEF4 !important;font-weight:700;text-decoration:none;border-radius:.375rem; padding:.75rem 1.5rem;">Inspire-se</a>
                           </td>
                         </tr>
                       </table>
