add conteudo email atualizado

--- a/email 06/index.html
+++ b/email 06/index.html
@@ -68,8 +68,11 @@
 
                     <table role="presentation" width="100%" cellpadding="0" cellspacing="0" align="center" style="margin:1rem auto;">
                       <tr>
-                        <td align="center">
+                        <td class="stack" width="50%" align="left" style="padding:0;">
                           <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2006/img/sacola-brasas.png" width="260" alt="Kit reforçado do Colégio Brasas" style="display:block; width:16.25rem; max-width:100%; height:auto; border:0; border-radius:.25rem;">
+                        </td>
+                        <td class="stack" width="50%" align="right" style="padding:0;">
+                          <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2006/img/estojo-brasas.png" width="260" alt="Estojo Colégio Brasas" style="display:block; width:16.25rem; max-width:100%; height:auto; border:0; border-radius:.25rem;">
                         </td>
                       </tr>
                     </table>
