add imagens e ajuste responsividade

--- a/email 09/index.html
+++ b/email 09/index.html
@@ -19,14 +19,22 @@
         .icons-row td{padding:0 .375rem 0 0!important}
         .col{display:block!important;width:100%!important}
         .card-pad{padding:1.25rem 1.25rem .25rem 1.25rem!important}
+
+        .no-stack .stack{
+          display:table-cell!important;
+          width:33.33%!important;
+          vertical-align:top!important;
+        }
+        .no-stack .col{
+          display:table-cell!important;
+          width:33.33%!important;
+          vertical-align:top!important;
+        }
+        .no-stack .col img{
+          max-width:100%!important;
+          height:auto!important;
+        }
       }
-      @media (prefers-color-scheme: dark){
-        .card{background:#F2EEF4!important;color:#291142!important}
-        .hero{background:#502262!important}
-        .bluebar{background:#2EB4EF!important}
-        .footer{background:#502262!important;color:#F2EEF4!important}
-      }
-      body,table,td,p,a,span{font-family:Arial,Helvetica,sans-serif!important}
     </style>
   </head>
   <body role="article" aria-roledescription="email" style="margin:0; padding:0; width:100%!important; height:100%!important; background:#f2f4f7; font-family:'Open Sans', Arial, Helvetica, sans-serif;">
@@ -39,7 +47,7 @@
         <td align="center" style="padding:1.5rem .75rem;">
           <table role="presentation" cellpadding="0" cellspacing="0" width="600" class="wrapper" style="width:37.5rem; max-width:37.5rem;">
             <tr>
-              <td class="card" style="background:#ffffff; border-radius:.5rem; overflow:hidden;">
+              <td class="card" style="background:#F2EEF4; border-radius:.5rem; overflow:hidden;">
                 <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="hero" style="background:#502262;">
                   <tr>
                     <td align="center" style="padding:1.25rem 2rem; text-align:center;">
@@ -54,7 +62,7 @@
                   <tr>
                     <td class="card-pad" style="padding:1.5rem 2rem .5rem 2rem; color:#291142;">
                       <p style="margin:0 0 .75rem 0; font-weight:700; font-size:1.75rem; line-height:2.25rem; color:#291142;">
-                        Prepare sua marca para encerrar<br>o ano em grande estilo
+                        Prepare sua marca para encerrar o<br> ano em grande estilo
                       </p>
                       <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
                         Com a chegada do fim de ano, surge a oportunidade perfeita para reforçar a
@@ -70,22 +78,22 @@
 
                   <tr>
                     <td style="padding:0 1.25rem 0 1.25rem;">
-                      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
+                      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="no-stack">
                         <tr>
                           <td class="col stack" width="33.33%" valign="top" style="padding:.5rem; text-align:center;">
-                            <img src="SEU_LINK_IMG_1.jpg" width="168" height="140" alt="Brindes corporativos criativos e funcionais" style="width:100%; max-width:10.5rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2009/img/brindes.png" width="168" height="140" alt="Brindes corporativos criativos e funcionais" style="width:100%; max-width:10.5rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
                             <p style="margin:0; font-size:.8125rem; line-height:1.25rem; color:#291142;">
                               Brindes corporativos<br>criativos e funcionais
                             </p>
                           </td>
                           <td class="col stack" width="33.33%" valign="top" style="padding:.5rem; text-align:center;">
-                            <img src="SEU_LINK_IMG_2.jpg" width="168" height="140" alt="Kits personalizados para colaboradores e clientes" style="width:100%; max-width:10.5rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2009/img/kit.png" width="168" height="140" alt="Kits personalizados para colaboradores e clientes" style="width:100%; max-width:10.5rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
                             <p style="margin:0; font-size:.8125rem; line-height:1.25rem; color:#291142;">
                               Kits personalizados para<br>colaboradores e clientes
                             </p>
                           </td>
                           <td class="col stack" width="33.33%" valign="top" style="padding:.5rem; text-align:center;">
-                            <img src="SEU_LINK_IMG_3.jpg" width="168" height="140" alt="Materiais visuais para eventos, ativações e campanhas sazonais" style="width:100%; max-width:10.5rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2009/img/material.png" width="168" height="140" alt="Materiais visuais para eventos, ativações e campanhas sazonais" style="width:100%; max-width:10.5rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
                             <p style="margin:0; font-size:.8125rem; line-height:1.25rem; color:#291142;">
                               Materiais visuais para<br>eventos, ativações e campanhas sazonais
                             </p>
@@ -97,7 +105,7 @@
 
                   <tr>
                     <td style="padding:1rem 2rem 1.5rem 2rem;">
-                      <p style="margin:0; font-size:.75rem; line-height:1.25rem; color:#6a5b75;">
+                      <p style="margin:0; font-size:.8125rem; line-height:1.25rem; color:#291142;">
                         <strong>Spoiler:</strong> alguns dos nossos clientes já estão garantindo projetos que unem
                         custo-benefício, originalidade e personalização para começar 2026 com o pé direito.
                       </p>
