correção imagem header

--- a/email 14/index.html
+++ b/email 14/index.html
@@ -37,7 +37,7 @@
                   <tr>
                     <td align="center" style="padding:1.25rem 2rem; text-align:center;">
                       <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
-                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/linkedin-icon.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; display:block; margin:0 auto; filter:brightness(0) invert(1);">
+                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/plure-logo-footer.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; display:block; margin:0 auto; filter:brightness(0) invert(1);">
                       </a>
                     </td>
                   </tr>
