--- a/email 19/index.html
+++ b/email 19/index.html
@@ -71,7 +71,7 @@
                         A comunicação visual vai além da estética: ela informa, conecta pessoas e transmite a essência da sua marca.
                       </p>
 
-                      <a href="https://SEU-LINK-AQUI" target="_blank" rel="noopener" style="text-decoration:none;">
+                      <a href="https://plurecomercial.com/portfolios/" target="_blank" rel="noopener" style="text-decoration:none;">
                         <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2019/img/comunicacao.png" width="515" height="290" alt="Sinalização corporativa" style="width:100%; max-width:520px; height:auto; border-radius:.25rem; margin:0 auto 1rem auto; display:block;">
                       </a>
 
