--- a/email 18/index.html
+++ b/email 18/index.html
@@ -59,7 +59,7 @@
                   <tr>
                     <td class="card-pad" style="padding:1.5rem 2rem .5rem 2rem; color:#291142;">
                       <p style="margin:0 0 .75rem 0; font-size:.8125rem; line-height:1.5rem;">
-                        Olá *|PRIMEIRO_NOME|*
+                        Olá *|PRIMEIRO_NOME|*,
                       </p>
 
                       <p style="margin:0 0 .75rem 0; font-size:.8125rem; line-height:1.5rem;">
